# src/main/java/de/uniba/dsg/jaxrs/dto/OrderItemDTO.java
@@ -1,27 +1,38 @@
 package de.uniba.dsg.jaxrs.dto;
 
+import de.uniba.dsg.jaxrs.controller.BeverageService;
 import de.uniba.dsg.jaxrs.model.Beverage;
+import de.uniba.dsg.jaxrs.model.BeverageType;
+import de.uniba.dsg.jaxrs.model.Bottle;
 import de.uniba.dsg.jaxrs.model.OrderItem;
 
 import javax.xml.bind.annotation.*;
+import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
 
 @XmlAccessorType(XmlAccessType.FIELD)
 @XmlRootElement(name = "orderItem")
-@XmlType(propOrder = {"number", "beverage", "quantity"})
+@XmlType(propOrder = {"orderNumber", "type", "beverageId", "price", "quantity", "href"})
 public class OrderItemDTO {
     @XmlElement(required = true)
-    private int number;
-    private Beverage beverage;
+    private int orderNumber;
+    //private Beverage beverage;
     private int quantity;
+    private BeverageType type;
+    private int beverageId;
+    private double price;
+    private URI href;
 
     public OrderItemDTO(){}
 
     public OrderItemDTO(OrderItem item){
-        this.beverage = item.getBeverage();
-        this.number = item.getNumber();
+        //this.beverage = item.getBeverage();
+        this.orderNumber = item.getNumber();
         this.quantity = item.getQuantity();
+        this.type = item.getBeverage().getType();
+        this.beverageId = item.getBeverage().getId();
+        this.price = item.getBeverage().getPrice();
     }
 
     public static List<OrderItemDTO> marshall(List<OrderItem> items){
@@ -30,21 +41,33 @@ public class OrderItemDTO {
         return itemDTOS;
     }
 
-    public int getNumber() {
-        return number;
+    public OrderItem unmarshall(){
+        Beverage orderItemBeverage = null;
+        if(this.type ==  BeverageType.BOTTLE_TYPE)
+            orderItemBeverage = BeverageService.instance.getBottle(this.beverageId);
+        else
+            orderItemBeverage = BeverageService.instance.getCrate(this.beverageId);
+
+        OrderItem orderItem = new OrderItem(this.orderNumber, orderItemBeverage, this.quantity);
+
+        return  orderItem;
     }
 
-    public void setNumber(int number) {
-        this.number = number;
+    public int getOrderNumber() {
+        return orderNumber;
     }
 
-    public Beverage getBeverage() {
-        return beverage;
+    public void setOrderNumber(int orderNumber) {
+        this.orderNumber = orderNumber;
     }
 
-    public void setBeverage(Beverage beverage) {
-        this.beverage = beverage;
-    }
+//    public Beverage getBeverage() {
+//        return beverage;
+//    }
+//
+//    public void setBeverage(Beverage beverage) {
+//        this.beverage = beverage;
+//    }
 
     public int getQuantity() {
         return quantity;
@@ -54,12 +77,56 @@ public class OrderItemDTO {
         this.quantity = quantity;
     }
 
+    public BeverageType getType() {
+        return type;
+    }
+
+    public void setType(BeverageType type) {
+        this.type = type;
+    }
+
+    public int getBeverageId() {
+        return beverageId;
+    }
+
+    public void setBeverageId(int beverageId) {
+        this.beverageId = beverageId;
+    }
+
+    public double getPrice() {
+        return price;
+    }
+
+    public void setPrice(double price) {
+        this.price = price;
+    }
+
+    public URI getHref() {
+        return href;
+    }
+
+    public void setHref(URI href) {
+        this.href = href;
+    }
+    //    @Override
+//    public String toString() {
+//        return "OrderItemDTO{" +
+//                "number=" + orderNumber +
+//                ", beverage=" + beverage +
+//                ", quantity=" + quantity +
+//                '}';
+//    }
+
+
     @Override
     public String toString() {
         return "OrderItemDTO{" +
-                "number=" + number +
-                ", beverage=" + beverage +
+                "orderNumber=" + orderNumber +
                 ", quantity=" + quantity +
+                ", type=" + type +
+                ", beverageId=" + beverageId +
+                ", price=" + price +
+                ", href=" + href +
                 '}';
     }
 }
