# src/main/java/de/uniba/dsg/jaxrs/model/BeverageType.java
@@ -1,0 +1,8 @@
+package de.uniba.dsg.jaxrs.model;
+
+import javax.xml.bind.annotation.XmlEnum;
+
+@XmlEnum(String.class)
+public enum BeverageType {
+    BOTTLE_TYPE, CRATE_TYPE
+}
